src/gwt/src/org/rstudio/studio/client/workbench/views/source/DocumentOutlineWidget.css
.container {
}

.leftSeparator {
	border-left: 1px solid rgba(128, 128, 128, 0.5);
	cursor: col-resize;
	width: 8px;
	z-index: 1;
}

.tree {
	overflow-x: hidden;
	overflow-y: scroll;
	padding-top: 3px;
	padding-bottom: 3px;
}

.node {
	/* TODO: Neater way to override Tree item styles */
	padding-top: 0px !important;
	padding-bottom: 0px !important;
	padding-right: 5px !important;
	padding-left: 4px !important;
}

.activeNode {
	border-left: 2px solid #67890a;
	padding-left: 2px !important;
}

.activeParentNode {
	border-left: 2px solid #abcdef;
	padding-left: 2px !important;
}

.nodeLabel {
	white-space: nowrap;
	font-family: sans-serif;
	cursor: pointer;
	font-size: 0.9em;
	text-overflow: ellipsis;
	overflow: hidden;
}

.nodeLabelChunk {
	font-style: italic;
}

.nodeLabelSection {
	font-weight: bold;
}

.nodeLabelFunction {
	font-family: inherit;
}

